name:                aoc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/aoc#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

executable aoc
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, split, containers, bytestring, base16-bytestring, cryptohash-md5, attoparsec, array, pqueue, text, mtl, lens, search-algorithms
  other-modules:       AOC, Utils, Y2015.Day01, Y2015.Day02, Y2015.Day03, Y2015.Day04, Y2015.Day05, Y2015.Day06, Y2015.Day07, Y2015.Day08, Y2015.Day09, Y2015.Day10, Y2015.Day11, Y2015.Day12, Y2015.Day13, Y2015.Day14, Y2015.Day15, Y2015.Day16, Y2015.Day17, Y2015.Day18, Y2015.Day19, Y2015.Day20, Y2015.Day21, Y2015.Day22, Y2015.Day23, Y2015.Day24, Y2015.Day25, Y2016.Day01, Y2016.Day02, Y2016.Day03, Y2016.Day04, Y2016.Day05, Y2016.Day06, Y2016.Day07, Y2016.Day08, Y2016.Day09, Y2016.Day10, Y2016.Day11, Y2016.Day12, Y2016.Day13, Y2016.Day14, Y2016.Day15, Y2016.Day16, Y2016.Day17, Y2016.Day18, Y2016.Day19, Y2016.Day20, Y2016.Day21, Y2016.Day22, Y2016.Day23, Y2016.Day24, Y2016.Day25, Y2018.Day01
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -Wno-unused-do-bind
                       -O2
                       -optc-O3
