cabal-version:       3.4
name:                aoc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/aoc#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

common utils
  hs-source-dirs: src
  other-modules: Utils
  default-language: Haskell2010
  build-depends: base >= 4.7 && < 5, bytestring, base16-bytestring, attoparsec
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -Wno-unused-do-bind
                       -O2
                       -optc-O3

-- 2015
executable y2015_01
  import: utils
  main-is: Y2015/Day01.hs
executable y2015_02
  import: utils
  main-is: Y2015/Day02.hs
  build-depends: split
executable y2015_03
  import: utils
  main-is: Y2015/Day03.hs
  build-depends: containers
executable y2015_04
  import: utils
  main-is: Y2015/Day04.hs
  build-depends: cryptohash-md5
executable y2015_05
  import: utils
  main-is: Y2015/Day05.hs
executable y2015_06
  import: utils
  main-is: Y2015/Day06.hs
  build-depends: array
executable y2015_07
  import: utils
  main-is: Y2015/Day07.hs
  build-depends: containers
executable y2015_08
  import: utils
  main-is: Y2015/Day08.hs
executable y2015_09
  import: utils
  main-is: Y2015/Day09.hs
  build-depends: containers
executable y2015_10
  import: utils
  main-is: Y2015/Day10.hs
executable y2015_11
  import: utils
  main-is: Y2015/Day11.hs
executable y2015_12
  import: utils
  main-is: Y2015/Day12.hs
executable y2015_13
  import: utils
  main-is: Y2015/Day13.hs
  build-depends: containers
executable y2015_14
  import: utils
  main-is: Y2015/Day14.hs
executable y2015_15
  import: utils
  main-is: Y2015/Day15.hs
executable y2015_16
  import: utils
  main-is: Y2015/Day16.hs
  build-depends: containers
executable y2015_17
  import: utils
  main-is: Y2015/Day17.hs
executable y2015_18
  import: utils
  main-is: Y2015/Day18.hs
  build-depends: array
executable y2015_19
  import: utils
  main-is: Y2015/Day19.hs
  build-depends: text
executable y2015_20
  import: utils
  main-is: Y2015/Day20.hs
executable y2015_21
  import: utils
  main-is: Y2015/Day21.hs
executable y2015_22
  import: utils
  main-is: Y2015/Day22.hs
  build-depends: lens
executable y2015_23
  import: utils
  main-is: Y2015/Day23.hs
executable y2015_24
  import: utils
  main-is: Y2015/Day24.hs
executable y2015_25
  import: utils
  main-is: Y2015/Day25.hs

-- 2016
executable y2016_01
  import: utils
  main-is: Y2016/Day01.hs
  build-depends: containers
executable y2016_02
  import: utils
  main-is: Y2016/Day02.hs
  build-depends: split, containers
executable y2016_03
  import: utils
  main-is: Y2016/Day03.hs
  build-depends: containers
executable y2016_04
  import: utils
  main-is: Y2016/Day04.hs
  build-depends: cryptohash-md5, containers
executable y2016_05
  import: utils
  main-is: Y2016/Day05.hs
  build-depends: cryptohash-md5
executable y2016_06
  import: utils
  main-is: Y2016/Day06.hs
  build-depends: array
executable y2016_07
  import: utils
  main-is: Y2016/Day07.hs
  build-depends: containers
executable y2016_08
  import: utils
  main-is: Y2016/Day08.hs
  build-depends: array
executable y2016_09
  import: utils
  main-is: Y2016/Day09.hs
  build-depends: containers
executable y2016_10
  import: utils
  main-is: Y2016/Day10.hs
  build-depends: containers
executable y2016_11
  import: utils
  main-is: Y2016/Day11.hs
  build-depends: containers, search-algorithms
executable y2016_12
  import: utils
  main-is: Y2016/Day12.hs
  build-depends: lens
executable y2016_13
  import: utils
  main-is: Y2016/Day13.hs
  build-depends: containers
executable y2016_14
  import: utils
  main-is: Y2016/Day14.hs
  build-depends: cryptohash-md5
executable y2016_15
  import: utils
  main-is: Y2016/Day15.hs
executable y2016_16
  import: utils
  main-is: Y2016/Day16.hs
  build-depends: containers
executable y2016_17
  import: utils
  main-is: Y2016/Day17.hs
  build-depends: cryptohash-md5, containers
executable y2016_18
  import: utils
  main-is: Y2016/Day18.hs
  build-depends: array
executable y2016_19
  import: utils
  main-is: Y2016/Day19.hs
  build-depends: text, containers
executable y2016_20
  import: utils
  main-is: Y2016/Day20.hs
executable y2016_21
  import: utils
  main-is: Y2016/Day21.hs
executable y2016_22
  import: utils
  main-is: Y2016/Day22.hs
  build-depends: containers
executable y2016_23
  import: utils
  main-is: Y2016/Day23.hs
  build-depends: mtl, lens
executable y2016_24
  import: utils
  main-is: Y2016/Day24.hs
  build-depends: containers, array
executable y2016_25
  import: utils
  main-is: Y2016/Day25.hs

-- 2017
executable y2017_01
  import: utils
  main-is: Y2017/Day01.hs
  build-depends: containers
executable y2017_02
  import: utils
  main-is: Y2017/Day02.hs
  build-depends: split, containers
executable y2017_03
  import: utils
  main-is: Y2017/Day03.hs
  build-depends: containers
executable y2017_04
  import: utils
  main-is: Y2017/Day04.hs
  build-depends: cryptohash-md5, containers
executable y2017_05
  import: utils
  main-is: Y2017/Day05.hs
  build-depends: cryptohash-md5
executable y2017_06
  import: utils
  main-is: Y2017/Day06.hs
  build-depends: array
executable y2017_07
  import: utils
  main-is: Y2017/Day07.hs
  build-depends: containers
executable y2017_08
  import: utils
  main-is: Y2017/Day08.hs
  build-depends: array
executable y2017_09
  import: utils
  main-is: Y2017/Day09.hs
  build-depends: containers
executable y2017_10
  import: utils
  main-is: Y2017/Day10.hs
  build-depends: containers
executable y2017_11
  import: utils
  main-is: Y2017/Day11.hs
  build-depends: containers, search-algorithms
executable y2017_12
  import: utils
  main-is: Y2017/Day12.hs
  build-depends: lens
executable y2017_13
  import: utils
  main-is: Y2017/Day13.hs
  build-depends: containers
executable y2017_14
  import: utils
  main-is: Y2017/Day14.hs
  build-depends: cryptohash-md5
executable y2017_15
  import: utils
  main-is: Y2017/Day15.hs
executable y2017_16
  import: utils
  main-is: Y2017/Day16.hs
  build-depends: containers
executable y2017_17
  import: utils
  main-is: Y2017/Day17.hs
  build-depends: cryptohash-md5, containers
executable y2017_18
  import: utils
  main-is: Y2017/Day18.hs
  build-depends: array
executable y2017_19
  import: utils
  main-is: Y2017/Day19.hs
  build-depends: text, containers
executable y2017_20
  import: utils
  main-is: Y2017/Day20.hs
executable y2017_21
  import: utils
  main-is: Y2017/Day21.hs
executable y2017_22
  import: utils
  main-is: Y2017/Day22.hs
  build-depends: containers
executable y2017_23
  import: utils
  main-is: Y2017/Day23.hs
  build-depends: mtl, lens
executable y2017_24
  import: utils
  main-is: Y2017/Day24.hs
  build-depends: containers, array
executable y2017_25
  import: utils
  main-is: Y2017/Day25.hs

-- 2018
executable y2018_01
  import: utils
  main-is: Y2018/Day01.hs

-- 2022
executable y2022_01
  import: utils
  main-is: Y2022/Day01.hs
executable y2022_02
  import: utils
  main-is: Y2022/Day02.hs
executable y2022_03
  import: utils
  main-is: Y2022/Day03.hs
  build-depends: split
executable y2022_04
  import: utils
  main-is: Y2022/Day04.hs
  build-depends: split
executable y2022_05
  import: utils
  main-is: Y2022/Day05.hs
  build-depends: containers, split
executable y2022_06
  import: utils
  main-is: Y2022/Day06.hs
executable y2022_07
  import: utils
  main-is: Y2022/Day07.hs
  build-depends: containers, mtl
executable y2022_08
  import: utils
  main-is: Y2022/Day08.hs
  build-depends: hmatrix
executable y2022_09
  import: utils
  main-is: Y2022/Day09.hs
  build-depends: containers
executable y2022_10
  import: utils
  main-is: Y2022/Day10.hs
  build-depends: split
executable y2022_11
  import: utils
  main-is: Y2022/Day11.hs
  build-depends: containers, mtl
executable y2022_12
  import: utils
  main-is: Y2022/Day12.hs
  build-depends: array, containers
executable y2022_13
  import: utils
  main-is: Y2022/Day13.hs
  build-depends: containers
executable y2022_14
  import: utils
  main-is: Y2022/Day14.hs
  build-depends: containers, split
executable y2022_15
  import: utils
  main-is: Y2022/Day15.hs
executable y2022_16
  import: utils
  main-is: Y2022/Day16.hs
  build-depends: containers, mtl
executable y2022_17
  import: utils
  main-is: Y2022/Day17.hs
  build-depends: mtl, containers
executable y2022_18
  import: utils
  main-is: Y2022/Day18.hs
  build-depends: containers
executable y2022_19
  import: utils
  main-is: Y2022/Day19.hs
executable y2022_20
  import: utils
  main-is: Y2022/Day20.hs
  build-depends: data-clist
executable y2022_21
  import: utils
  main-is: Y2022/Day21.hs
  build-depends: containers
executable y2022_22
  import: utils
  main-is: Y2022/Day22.hs
  build-depends: containers
executable y2022_23
  import: utils
  main-is: Y2022/Day23.hs
  build-depends: containers
executable y2022_24
  import: utils
  main-is: Y2022/Day24.hs
  build-depends: containers, psqueues
  ghc-options: -O2 -optc-O3
executable y2022_25
  import: utils
  main-is: Y2022/Day25.hs

-- 2022
executable y2023_01
  import: utils
  main-is: Y2023/Day01.hs
executable y2023_02
  import: utils
  main-is: Y2023/Day02.hs
